# ContextCurator

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  ROADMAP.md  demo_advisor.py  demo_all_in_one.py  demo_builder.py  demo_deep_dive.py  demo_enrichment.py  demo_full_scan.py  demo_tree.py  mkdocs.yml  pyproject.toml  report.txt  requirements-dev.txt  setup_check.py  setup_check.sh
dev/: issues.md  log.md
dev/phase-01/: plan-01-basis-projektstruktur-und-dependencies-erstellen.md  plan-02-strikte-tdd-tooling-konfiguration-in-pyproject.toml.md  plan-03-mkdocs-dokumentation-mit-material-theme-einrichten.md  plan-04-proof-of-concept:-smoke-tests-und-initiale-code-basis.md  plan-05-workflow-dokumentation-und-verifikation.md
dev/phase-02/: 01-test-für-treegenerator-erstellen.md  02-green-phase:-treegenerator-implementieren.md  03-refactor-phase:-100%-coverage-und-code-qualität-sicherstellen.md
dev/phase-03-refact/: 01-red-phase:-treereport-datenmodell-und-tests-erstellen.md  03-refactor-phase:-100%-coverage-und-code-qualität-sicherstellen.md  task4_optimizations_detail.md  task4_summary.md
dev/phase-04/: 01-llm-provider-interface-und-factory-(core-modul).md  02-tests-für-llm-provider-interface.md  03-structureadvisor-implementierung-mit-dependency-injection.md  04-tests-für-structureadvisor-(tdd).md
dev/phase-05/: 01-dependencies-hinzufügen-(openai>=1.0.0).md  02-cerebrasprovider-implementieren-mit-openai-client.md  03-demo-skript-erstellen-(demo_advisor.py).md
dev/phase-06/: 01-fileentry-datenmodell-erweitern.md  02-filewalker-tdd:-red-phase---tests-erstellen.md  03-filewalker-green-phase---implementierung.md  04-filewalker-refactor-phase---100%-coverage-sicherstellen.md
dev/phase-07/: 01-red-phase:-tests-für-.gitignore-unterstützung-und-erweiterte-default-ignores.md  02-green-phase:-implementierung-der-.gitignore-unterstützung-und-master-liste.md  03-refactor-phase:-100%-coverage-verifizieren-und-code-qualität-sicherstellen.md
dev/phase-08/: 01-red-phase:-tests-für-mapper-module-erstellen.md  02-green-phase:-mapper-module-implementieren.md  03-refactor-phase:-100%-coverage-und-code-qualität-sicherstellen.md
dev/phase-09/: 01-dependencies-hinzufügen-(orjson-&-networkx).md  02-query-caching-in-parserengine-implementieren.md
dev/phase-10/: 01-ordnerstruktur-und-graphmanager-grundgerüst-erstellen.md  02-red-phase:-tests-für-graphmanager-erstellen.md  03-green-phase:-graphmanager-methoden-implementieren.md  04-refactor-phase:-100%-coverage-und-code-qualität-sicherstellen.md
dev/phase-11/: 01-red-phase:-integration-test-für-mapbuilder-erstellen.md  02-green-phase:-mapbuilder-klasse-implementieren.md  03-refactor-phase:-100%-coverage-und-code-qualität-sicherstellen.md  04-module-exports-und-integration-finalisieren.md
dev/phase-12/: 01-dependencies-hinzufügen-(pytest-asyncio-&-tenacity).md  02-llmprovider-protocol-&-mockprovider-auf-async-umstellen.md  03-cerebrasprovider-auf-asyncopenai-mit-tenacity-retry-umstellen.md  04-structureadvisor-auf-async-umstellen.md  05-tests-für-llmprovider-auf-async-umstellen-(tdd-red-phase).md  06-tests-für-structureadvisor-auf-async-umstellen-(tdd-red-phase).md
dev/phase-13/: 01-ordnerstruktur-und-python-query-datei-erstellen.md  02-tdd-red-phase:-tests-für-dynamisches-query-loading-erstellen.md  03-green-phase:-dynamisches-query-loading-implementieren.md  04-refactor-phase:-exports-bereinigen-und-100%-coverage-sicherstellen.md
dev/phase-14/: 01-semantic-enricher-mit-ai-batch-processing-implementieren-(tdd).md
dev/phase-15/: 01-.env-support-für-developer-experience-aktivieren.md
dev/phase-16/: 01-erweitere-_resolve_and_add_import-für-externe-module.md  02-erweitere-graphmanager-für-lazy-node-erstellung.md  03-tdd:-tests-für-externe-module-in-test_builder.py.md  04-tdd:-tests-für-graphmanager-lazy-node-erstellung.md
dev/phase-17/: 01-code-content-integration-in-graphenricher.md
dev/phase-18/: 01-hierarchische-aggregation.md
dev/phase-19/: 01-inkrementelles-graph-update.md
dev/phase-20/: 01-git-hook-integration.md
dev/phase-21/: Plan-Analyzer Agent
dev/refactoring/: 02-green-phase:-treegenerator-mit-treereport-und-pathspec-implementieren.md  task4_performance_analysis.md
docs/: api.md  cli.md  index.md
scripts/: check_cli.sh  verify_installation.sh
(+74 files in other folders)
